# Document_Copilot_LC

./: .gitignore  README.md
Backend/: db.py  main.py  pyproject.toml  requirements.txt  test.py
Backend/Agents/Doc_Parser/: Readme.md  __init__.py  agent.yaml  config.py  graph.py  state.py  tools.py
Backend/Agents/Doc_Parser/nodes/: __init__.py  pipeline.py
Backend/Agents/Internal_Checker/: Readme.md  __init__.py  agent.yaml  config.py  graph.py  state.py  tools.py
Backend/Agents/Internal_Checker/nodes/: pipeline.py
Backend/Agents/Orchestrator/: Readme.md  agent.yaml  checkpoint.py  config.py  graph.py  state.py  tools.py
Backend/Agents/Orchestrator/nodes/: pipeline.py
Backend/Agents/Report_Generator/: Readme.md  __init__.py  agent.yaml  config.py  graph.py  state.py  tools.py
Backend/Agents/Report_Generator/nodes/: pipeline.py
Backend/Agents/Semantic_Comparator/: Readme.md  agent.yaml  config.py  graph.py  state.py  tools.py
Backend/Agents/Semantic_Comparator/nodes/: pipeline.py
Backend/Prompts/: extract_fields_prompts.py  report_generator_prompts.py  semantic_comparator_prompts.py
Backend/api/: auth.py
Backend/api/routes/: __init__.py  runs.py
Backend/configs/lc/: schema.json
Backend/rag/: README.md  __init__.py  chunkers.py  ingest.py  load_corpus.py  retriever.py
Backend/rag/corpora/: isbp821.txt  ucp600.txt
Backend/scripts/: ask.py  inspect_store.py  run_ingest.py  test_rag.py  test_rag_edges.py  test_semantic.py
Frontend/: index.html  package-lock.json
Frontend/src/: App.jsx  main.jsx
Frontend/src/components/: FileDrop.jsx  (+1 more)
(+3 files in other folders)
