[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groq==1.5.0",
    "langgraph==1.2.6",
    "pdfplumber==0.11.10",
    "python-dotenv==1.1.1",
    "python-dateutil==2.9.0",
    "chromadb",
    "sentence-transformers",
    "langchain-huggingface==1.2.2",
    "langchain-chroma==1.1.0",
    "pytesseract==0.3.13",
    "pdf2image==1.17.0",
    "pymupdf>=1.25.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.12",
    "rapidfuzz>=3.0.0",
    "langchain-huggingface>=1.2.2",
    "langchain-chroma>=1.1.0",
    "sentence-transformers>=5.6.0",
    "fpdf2>=2.7.8",
    "langgraph-checkpoint-sqlite>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
markers = [
    "integration: rebuilds the vector store and loads the embedding model (slow)",
]

